# smaef

./: HOW-TO  LICENSE.txt  Makefile  Pipfile  README.md  TODO.txt  raport  rev.py  run.py  setup.cfg  setup.py  testLogic
REV.egg-info/: PKG-INFO  SOURCES.txt
doc/: conf.py  documentation  enumTags  index.rst  makefiletemplate  plimTemplate  plimTemplateWithCardinals
examples/: example1.plim  multipleArtefacts.pplim
examples/adwo/firstRun/: Analisis  ReportADWO  ReportADWOSplash
examples/adwo/secondrun/: .AdwoAdBrowserActivityAnalisis.swp  .Alphabet.swo  .Alphabet.swp  .Alphabet2.0.swp  .Artefacts_relations.swp  .Relations.swp  AdwoAdBrowserActivityAnalisis  AdwoSplashAdActivityAnalisis  Alphabet  Artefacts_relations  CLASS-n  EAnalisis  Relations  Report
examples/five/: Graph.gv  five.TTplim  five.Tplim  five.html  five.json  five.xml
examples/testTwo/: Graph.gv  RAPORT  adaptedGraph.py  two.Tplim  two.html  two.json  two.xml
examples/three/: .three.json.swp  Graph.gv  three.Tplim  three.html  three.json  three.xml
lib/: jsonlint
met/: rev.py
met/scripts/: .generateGraph.py.swp  generateGraph.py  generateHTML.py  generateJSON.py  generateXML.py  htmlPython.py  xmlFormatter.py  xmlMerger.py
output/aa/: aa.html  aa.xml
output/aaa/: aaa.json  aaa.xml
output/ar/: ar.html  ar.json  ar.xml
output/example1/: example1.html  example1.json  example1.xml
output/singleArtefact/: singleArtefact.html  singleArtefact.json  singleArtefact.xml
plims/: aaa.plim  artefacts.pplim  example1.plim  singeArtefact.plim  singeArtefact.xml  singleArtefact.plim
plims/template/: ar.plimm  templateArtefacts.pplim
res/schema/: s2extend
res/styles/: style.css
rev/scripts/: generateGraph.py  generateHTML.py  generateXML.py  htmlPython.py  xmlFormatter.py  xmlMerger.py
smaef/: jaro.py
smaef/test/: conftest.py  test_jaro.py
tests/: Makefile  aaa.html  cconftest.py  generateGraph.py  test.py  test_generateGraph.py  test_generateJSON.py  test_generateXML.py  test_graph.py  test_htmlPython.py  test_module.py  test_xmlMerger.py
tests/files/: .aaa.plim.swp  aa.plim  htmlTest.txt  singleArtefact.json  test.txt
tests/lib/: plimc
tests/output/aa/: aa.html  aa.json  aa.xml
tests/res/html/: top.html
tests/res/outs/: outGraphSingle.txt
(+1 files in other folders)
