[metadata]
license = MIT
version = 0.0.1
name = jaro
author = Susan Philip
author-email = susph93@hotmail.com
homepage = https://github.com/Smooth/jaro
url = https://github.com/DoggySmooth/jaro
long_description = file: README.rst
summary = Standarized Format for Reverse Engineering
python-requires = 3.6
keywords =
    sample
    template
    development
classifiers =
    Environment :: Console
    Operating System :: POSIX
    Natural Language :: English
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
description-file = README.rst

[check]
strict = 1
metadata = 1
restructuredtext = 1

[mypy]
ignore_missing_imports = true

[flake8]
ignore = E501

[bdist_wheel]
universal = 1

[build_sphinx]
all_files = 1
builder = html
build-dir = doc/
source-dir = doc/
warning-is-error = 1

[tool:pytest]
addopts = --strict --doctest-modules
exclude =
    build

[coverage:report]
fail_under = 90
