[metadata]
license = MIT
version = 0.1
name = met
author = Susan Philip
author-email = susph93@hotmail.com
homepage = https://github.com/Smooth/met
url = https://github.com/DoggySmooth/met
long_description = file: README.md
summary = Standarized Format for Reverse Engineering
python-requires = 3.6
keywords =
    format
    malware
    reverse
    analysis
    engineering
classifiers =
    Environment :: Console
    Operating System :: POSIX
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
description-file = README.rst

[check]
strict = 1
metadata = 1
restructuredtext = 1

[mypy]
ignore_missing_imports = true

[flake8]
ignore = E501

[bdist_wheel]
universal = 1

[build_sphinx]
all_files = 1
builder = html
build-dir = doc/
source-dir = doc/
warning-is-error = 1

[tool:pytest]
addopts = --strict --doctest-modules
exclude =
    build

[coverage:report]
fail_under = 90
